errors in astools test suite